--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser-dynamic": "~11.1.1",
     "@angular/router": "~11.1.1",
     "bootstrap": "^3.4.1",
+    "fs": "0.0.1-security",
+    "httpclient": "^0.1.0",
     "jquery": "^3.6.0",
-    "rxjs": "~6.6.0",
+    "rxjs": "^6.6.6",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
