--- a/Angular/angular.json
+++ b/Angular/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "20aff699-fc7b-44c0-8ce7-978fd4fa7ba9"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
