--- a/Node/package.json
+++ b/Node/package.json
@@ -14,6 +14,7 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "nodemailer": "^6.6.0",
+    "nodemailer-smtp-transport": "^2.7.4",
     "pug": "2.0.0-beta11",
     "razorpay": "^2.0.6"
   }
